--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preload" href="http://localhost:5173/src/assets/fonts/Rubik/static/Rubik-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SHA project</title>
+    <title>EZ Learn</title>
   </head>
   <body>
     <div id="root"></div>
